# zunda_w

./: .gitignore  LICENSE  Makefile  README.md  check_local_port_available.py  filter_word.txt  profile.json  prompt.txt  pyproject.toml  user_dict.csv  v_profile.json
config/: filter_word.txt  user_dict.csv  voicevox_emotion_styles.json
config/markdown/: blog_template.md
config/publish/: side_A.yml  side_A_real.yml  side_B.yml
demo/: demo_whisper.py  mvpy_audio.py
example/: questions.txt
preset_config/: default.yaml  movie.yaml  postprocess.yaml
tests/: conftest.py  test_md_to_html.py  test_placeholder.py  test_srt.py  test_tag.py  test_voice_vox.py
tests/test_data/: markdonw.html  missing_index.srt  sample.srt  test_hatena_blog.md
v_profile_preset/: movie_voice_profile.json
zunda_w/: __init__.py  __main__.py  alert.py  api.py  arg.py  array_util.py  audio.py  cache.py  coeiroink.py  constants.py  download.py  download_voicevox.py  edit.py  hash.py  main.py  model_cache.py  output.py  silent.py  srt_ops.py  subtitle_util.py  transcribe.py  util.py  voice_vox.py  voicevox_download_link.py  whisper_json.py  whisper_util.py  words.py
zunda_w/apis/: __init__.py  __main__.py  blue_sky.py  chatgpt.py  cmd.py  hackmd.py  podcast_upload.py  share.py  twitter.py
zunda_w/apis/hatena/: __init__.py  __main__.py  hatena.py  hatena_blog_post_template.xml  hatena_comment_with_avatar.css  hatena_comment_with_avatar.html  placeholder.py
zunda_w/etc/: alert.py  cmd_log.py  fille.py  placeholder.py  timer.py  tools.py
zunda_w/gui/: __main__.py  main.py
zunda_w/llm/: add_punctuation mark.py  convert_word_to_kana.py  create_blog_categories.py  create_podcast_title.py  models.py  shownote.py  srt4llm.py
zunda_w/postprocess/: dummy.py  normalize.py
zunda_w/postprocess/srt/: postprocess.py  tag.py  tag_pattern.py
zunda_w/sentence/: ginza_sentence.py  sentiment.py
zunda_w/voicevox/: download_voicevox.py  voice_vox.py  voicevox_download_link.py  voicevox_user_dict.py
