[tool.poetry]
name = "zunda-w"
version = "0.1.4"
description = "zunda-ASMR is speech to text to speech by voicevox(+α) and whisper ."
authors = ["OhkuboSGMS <ginger.os777146th@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "zunda_w" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9"
dataclasses-json = "^0.5.7"
py7zr = "^0.20.2"
pyunpack = "^0.3"
pydub = "^0.25.1"
requests = "^2.28.1"
srt = "^3.5.2"
classopt = "^0.1.9"
tqdm = "^4.64.1"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"
openai = "^0.27.2"
fire = "^0.5.0"
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "b5851c6c40e753606765ac45b85b298e3ae9e00d" }
## poetry install で失敗するので追加(0.18.3が問題？)
future = "0.18.2"
voicevox-engine-user-dict = { git = "https://github.com/OhkuboSGMS/voicevox_engine_user_dict.git" }
omegaconf = "^2.3.0"
ginza = "^5.1.2"
ja-ginza-electra = "^5.1.2"
torch = [
    { version = "2.0.0", platform = "win32", source = "torch-cuda" },
]
torchvision = [
    { version = "0.15.1", platform = "win32", source = "torch-cuda" },
]
torchaudio = [
    { version = "2.0.1", platform = "win32", source = "torch-cuda" },
]
whisperx = { git = "https://github.com/m-bain/whisperX.git" }

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zunda = "zunda_w.__main__:cli"